force-app/main/default/objects/MediationRequest__c/fields/OtherTerms__c.field-meta.xml
<CustomField>
    <fullName>OtherTerms__c</fullName>
    <formula>DesiredCondition__r.OtherTerms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>その他条件</label>
    <type>Text</type>
</CustomField>