force-app/main/default/objects/MediationRequest__c/fields/ParkingContractType__c.field-meta.xml
<CustomField>
    <fullName>ParkingContractType__c</fullName>
    <formula>TEXT(DesiredCondition__r.ParkingContractType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約区分</label>
    <type>Text</type>
</CustomField>