force-app/main/default/objects/MediationRequest__c/fields/ParkingUnitNum__c.field-meta.xml
<CustomField>
    <fullName>ParkingUnitNum__c</fullName>
    <formula>DesiredCondition__r.ParkingUnitNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>駐車場（台）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>