force-app/main/default/objects/MediationRequest__c/fields/PreviewDesiredDate1__c.field-meta.xml
<CustomField>
    <fullName>PreviewDesiredDate1__c</fullName>
    <formula>DesiredCondition__r.PreviewDesiredDate1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下見予定日①</label>
    <type>Date</type>
</CustomField>