force-app/main/default/objects/MediationRequest__c/fields/PreviewDesiredDate2__c.field-meta.xml
<CustomField>
    <fullName>PreviewDesiredDate2__c</fullName>
    <formula>DesiredCondition__r.PreviewDesiredDate2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下見予定日②</label>
    <type>Date</type>
</CustomField>