force-app/main/default/objects/MediationRequest__c/fields/PreviewDesiredDate2Note__c.field-meta.xml
<CustomField>
    <fullName>PreviewDesiredDate2Note__c</fullName>
    <formula>DesiredCondition__r.PreviewDesiredDate2Note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下見予定日②コメント</label>
    <type>Text</type>
</CustomField>