force-app/main/default/objects/MediationRequest__c/fields/PrintingTime__c.field-meta.xml
<CustomField>
    <fullName>PrintingTime__c</fullName>
    <label>印刷時間</label>
    <type>DateTime</type>
</CustomField>