force-app/main/default/objects/MediationRequest__c/fields/ProcedureShapeCalc__c.field-meta.xml
<CustomField>
    <fullName>ProcedureShapeCalc__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>手続き形態計算</label>
    <type>Text</type>
</CustomField>