force-app/main/default/objects/MediationRequest__c/fields/ProvisionalFax__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalFax__c</fullName>
    <label>仮FAX</label>
    <type>Phone</type>
</CustomField>