force-app/main/default/objects/MediationRequest__c/fields/ProvisionalPhone__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalPhone__c</fullName>
    <label>仮TEL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>