force-app/main/default/objects/MediationRequest__c/fields/RealEstateAtDecisionContactName__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAtDecisionContactName__c</fullName>
    <label>物件決定時連絡先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>