force-app/main/default/objects/MediationRequest__c/fields/RealEstateAtDecisionContactPhone__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAtDecisionContactPhone__c</fullName>
    <label>物件決定時連絡先TEL</label>
    <type>Phone</type>
</CustomField>