force-app/main/default/objects/MediationRequest__c/fields/RealEstateDecisionConfirmTraderName__c.field-meta.xml
<CustomField>
    <fullName>RealEstateDecisionConfirmTraderName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件決定確認業者名</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MediationRequestIdAccountRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>