force-app/main/default/objects/MediationRequest__c/fields/ReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiptDate__c</fullName>
    <label>受領日</label>
    <type>DateTime</type>
</CustomField>