force-app/main/default/objects/MediationRequest__c/fields/ReEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ReEmployeeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>繰社員ＩＤ</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MediationRequestIdContactRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>