force-app/main/default/objects/MediationRequest__c/fields/RentIncluding__c.field-meta.xml
<CustomField>
    <fullName>RentIncluding__c</fullName>
    <formula>ServiceContractNewMatterAgency__r.RentIncluding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【規定】家賃に含むもの</label>
    <type>Text</type>
</CustomField>