force-app/main/default/objects/MediationRequest__c/fields/RequestAcceptTime__c.field-meta.xml
<CustomField>
    <fullName>RequestAcceptTime__c</fullName>
    <label>依頼受付時間</label>
    <type>Date</type>
</CustomField>