force-app/main/default/objects/MediationRequest__c/fields/RequestTraderId__c.field-meta.xml
<CustomField>
    <fullName>RequestTraderId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>依頼業者</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>斡旋依頼 (依頼業者)</relationshipLabel>
    <relationshipName>MediationRequestIdAccountRelation3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>