force-app/main/default/objects/MediationRequest__c/fields/RequestTraderName__c.field-meta.xml
<CustomField>
    <fullName>RequestTraderName__c</fullName>
    <formula>RequestTraderId__r.Name</formula>
    <label>依頼業者名</label>
    <type>Text</type>
</CustomField>