force-app/main/default/objects/MediationRequest__c/fields/ReRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ReRequestDate__c</fullName>
    <label>繰依頼日</label>
    <type>Date</type>
</CustomField>