force-app/main/default/objects/MediationRequest__c/fields/ResidentEmail__c.field-meta.xml
<CustomField>
    <fullName>ResidentEmail__c</fullName>
    <formula>MediationEmployeeId__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メールアドレス</label>
    <type>Text</type>
</CustomField>