force-app/main/default/objects/MediationRequest__c/fields/ResidentHomeFax__c.field-meta.xml
<CustomField>
    <fullName>ResidentHomeFax__c</fullName>
    <formula>MediationEmployeeId__r.HomeFax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自宅FAX</label>
    <type>Text</type>
</CustomField>