force-app/main/default/objects/MediationRequest__c/fields/ResidentHomePhone__c.field-meta.xml
<CustomField>
    <fullName>ResidentHomePhone__c</fullName>
    <formula>MediationEmployeeId__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自宅TEL</label>
    <type>Text</type>
</CustomField>