force-app/main/default/objects/MediationRequest__c/fields/ResidentIsPortalUser__c.field-meta.xml
<CustomField>
    <fullName>ResidentIsPortalUser__c</fullName>
    <formula>MediationEmployeeId__r.IsPortalUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ポータルユーザー</label>
    <type>Checkbox</type>
</CustomField>