force-app/main/default/objects/MediationRequest__c/fields/ResidentMobile2__c.field-meta.xml
<CustomField>
    <fullName>ResidentMobile2__c</fullName>
    <formula>MediationEmployeeId__r.Mobile2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>携帯番号2</label>
    <type>Text</type>
</CustomField>