force-app/main/default/objects/MediationRequest__c/fields/ResidentMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>ResidentMobilePhone__c</fullName>
    <formula>MediationEmployeeId__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>携帯番号1</label>
    <type>Text</type>
</CustomField>