force-app/main/default/objects/MediationRequest__c/fields/ResidentPhone__c.field-meta.xml
<CustomField>
    <fullName>ResidentPhone__c</fullName>
    <formula>MediationEmployeeId__r.TEL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>勤務先TEL</label>
    <type>Text</type>
</CustomField>