force-app/main/default/objects/MediationRequest__c/fields/ResponsibilityParticipatingStore__c.field-meta.xml
<CustomField>
    <fullName>ResponsibilityParticipatingStore__c</fullName>
    <label>責任加盟店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>