force-app/main/default/objects/MediationRequest__c/fields/SelectionResult__c.field-meta.xml
<CustomField>
    <fullName>SelectionResult__c</fullName>
    <label>選定結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>