force-app/main/default/objects/MediationRequest__c/fields/SNTTeam__c.field-meta.xml
<CustomField>
    <fullName>SNTTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SNT担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>斡旋依頼 (SNT担当チーム)</relationshipLabel>
    <relationshipName>SNTTeam</relationshipName>
    <type>Lookup</type>
</CustomField>