force-app/main/default/objects/MediationRequest__c/fields/StandardDate__c.field-meta.xml
<CustomField>
    <fullName>StandardDate__c</fullName>
    <label>基準日</label>
    <type>Date</type>
</CustomField>