force-app/main/default/objects/MediationRequest__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>AccountName__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>都道府県</label>
    <type>Text</type>
</CustomField>