force-app/main/default/objects/MediationRequest__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <formula>ServiceContractNewMatterAgency__r.Structure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【規定】構造</label>
    <type>Text</type>
</CustomField>