force-app/main/default/objects/MediationRequest__c/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <label>一時</label>
    <length>255</length>
    <type>Text</type>
</CustomField>