force-app/main/default/objects/MediationRequest__c/fields/TextGroup1__c.field-meta.xml
<CustomField>
    <fullName>TextGroup1__c</fullName>
    <label>テキスト１G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>