force-app/main/default/objects/MediationRequest__c/fields/TokutokuServiceNecessity__c.field-meta.xml
<CustomField>
    <fullName>TokutokuServiceNecessity__c</fullName>
    <formula>AccountName__r.ServiceContractNewMatter__r.IsTokutokuServiceApply__c</formula>
    <label>得々サービスの要否</label>
    <type>Text</type>
</CustomField>