force-app/main/default/objects/MediationRequest__c/fields/TokutokuServiceNecessityRealEstate__c.field-meta.xml
<CustomField>
    <fullName>TokutokuServiceNecessityRealEstate__c</fullName>
    <formula>TEXT(ServiceContractNewMatterAgency__r.TokutokuServiceFeasibility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得々サービスの要否</label>
    <type>Text</type>
</CustomField>