force-app/main/default/objects/MediationRequest__c/fields/TransferForm__c.field-meta.xml
<CustomField>
    <fullName>TransferForm__c</fullName>
    <formula>DesiredCondition__r.TransferForm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>赴任形態</label>
    <type>Text</type>
</CustomField>