force-app/main/default/objects/MediationRequest__c/fields/TransferShape__c.field-meta.xml
<CustomField>
    <fullName>TransferShape__c</fullName>
    <label>転勤形態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>