force-app/main/default/objects/MediationRequest__c/fields/ValidPeriodDate__c.field-meta.xml
<CustomField>
    <fullName>ValidPeriodDate__c</fullName>
    <label>有効期限日</label>
    <type>Date</type>
</CustomField>