force-app/main/default/objects/MediationRequest__c/fields/WsrKey__c.field-meta.xml
<CustomField>
    <fullName>WsrKey__c</fullName>
    <label>wsrKEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>