force-app/main/default/objects/MediationRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NewMatterId__c</columns>
    <columns>DesiredCondition__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>MediationRequestSendDateTime__c</columns>
    <columns>RequestTraderId__c</columns>
    <columns>RequestTrader__c</columns>
    <columns>ContractCategory__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>