force-app/main/default/objects/MediationRequest__c/listViews/AllMediationRequest.listView-meta.xml
<ListView>
    <fullName>AllMediationRequest</fullName>
    <columns>NAME</columns>
    <columns>MediationCompanyId__c</columns>
    <columns>MediationRequestSendDateTime__c</columns>
    <columns>RequestTraderId__c</columns>
    <columns>RequestTrader__c</columns>
    <columns>ContractCategory__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての斡旋依頼</label>
</ListView>