force-app/main/default/objects/MediationRequest__c/listViews/CompleteMediationRequestList.listView-meta.xml
<ListView>
    <fullName>CompleteMediationRequestList</fullName>
    <columns>NAME</columns>
    <columns>NewMatterId__c</columns>
    <columns>AccountName__c</columns>
    <columns>EmployeeName__c</columns>
    <columns>MediationRequestDate__c</columns>
    <columns>FirstContactDate__c</columns>
    <columns>RealEstateCompanyCharge__c</columns>
    <columns>DecisionContactDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MediationRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ContractCategory__c</field>
        <operation>equals</operation>
        <value>成約</value>
    </filters>
    <label>03_物件決定済み（成約）</label>
</ListView>