force-app/main/default/objects/MediationRequest__c/listViews/Introducing.listView-meta.xml
<ListView>
    <fullName>Introducing</fullName>
    <columns>NAME</columns>
    <columns>DesiredCondition__c</columns>
    <columns>AccountName__c</columns>
    <columns>EmployeeName__c</columns>
    <columns>MediationRequestDate__c</columns>
    <columns>DesiredPreviewDate__c</columns>
    <columns>MoveDesiredDate__c</columns>
    <columns>FirstContactDate__c</columns>
    <columns>RealEstateCompanyCharge__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MediationRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>IsContract__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>02_物件紹介中</label>
</ListView>