force-app/main/default/objects/MediationRequest__c/listViews/MediationRequestList.listView-meta.xml
<ListView>
    <fullName>MediationRequestList</fullName>
    <columns>NAME</columns>
    <columns>MediationRequestDate__c</columns>
    <columns>MediationCompanyId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AgencyTraderNameLoginUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RealEstateName__c</field>
        <operation>equals</operation>
    </filters>
    <label>未参照の斡旋依頼</label>
</ListView>