force-app/main/default/objects/MediationRequest__c/listViews/NotRegsterDecisionRealEstate.listView-meta.xml
<ListView>
    <fullName>NotRegsterDecisionRealEstate</fullName>
    <columns>NAME</columns>
    <columns>ConsignmentAccountName__c</columns>
    <columns>EmployeeName__c</columns>
    <columns>RequestTrader__c</columns>
    <columns>RequestTraderId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ContractCategory__c</field>
        <operation>equals</operation>
        <value>依頼中</value>
    </filters>
    <label>決定物件登録が未実施の斡旋依頼</label>
</ListView>