force-app/main/default/objects/MediationRequest__c/listViews/OtherDecisionMediationRequestList.listView-meta.xml
<ListView>
    <fullName>OtherDecisionMediationRequestList</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>EmployeeName__c</columns>
    <columns>MediationRequestDate__c</columns>
    <columns>FirstContactDate__c</columns>
    <columns>RealEstateCompanyCharge__c</columns>
    <columns>LostDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MediationRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ContractCategory__c</field>
        <operation>equals</operation>
        <value>他決</value>
    </filters>
    <filters>
        <field>AgencyTraderNameLoginUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>04_物件決定済み（他決）</label>
</ListView>