force-app/main/default/objects/MediationRequest__c/listViews/Outstanding.listView-meta.xml
<ListView>
    <fullName>Outstanding</fullName>
    <columns>NAME</columns>
    <columns>DesiredCondition__c</columns>
    <columns>AccountName__c</columns>
    <columns>EmployeeName__c</columns>
    <columns>MediationRequestDate__c</columns>
    <columns>DesiredPreviewDate__c</columns>
    <columns>MoveDesiredDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MediationRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>FirstContactDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>01_未対応</label>
</ListView>