force-app/main/default/objects/MediationRequest__c/listViews/Unsupported.listView-meta.xml
<ListView>
    <fullName>Unsupported</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MediationRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>FirstContactDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>未対応</label>
</ListView>